chore: docs review

--- a/docs/guides/styling/Customization.stories.mdx
+++ b/docs/guides/styling/Customization.stories.mdx
@@ -11,7 +11,7 @@ import {
   GlobalOverride,
 } from "./Customization";
 
-<Meta title="Guides/Styling/Customization" />
+<Meta title="Guides/Styling" />
 
 # Customization <a id="customization" />
 
@@ -109,7 +109,7 @@ const MyComponent = () => (
 ```
 
 <Canvas>
-  <Story name="OverrideClassName">
+  <Story name="Override ClassName">
     <OverrideClassName />
   </Story>
 </Canvas>
@@ -164,7 +164,7 @@ const MyComponent = () => {
 ```
 
 <Canvas>
-  <Story name="NestedClasses">
+  <Story name="Nested Classes">
     <NestedClasses />
   </Story>
 </Canvas>
@@ -196,7 +196,7 @@ const MyComponent = () => (
 ```
 
 <Canvas>
-  <Story name="OverrideClasses">
+  <Story name="Override Classes">
     <OverrideClasses />
   </Story>
 </Canvas>
@@ -240,7 +240,7 @@ Then, you can import the component and use it like so:
 ```
 
 <Canvas>
-  <Story name="ReusableComponent">
+  <Story name="Reusable Component">
     <ReusableComponent id="reusable-button-id">Click me!</ReusableComponent>
   </Story>
 </Canvas>
@@ -275,7 +275,7 @@ Then, you can use the component the following way:
 ```
 
 <Canvas>
-  <Story name="DynamicReusableComponent">
+  <Story name="Dynamic Reusable Component">
     <DynamicReusableComponent
       id="dynamic-reusable-button-sg-id"
       variant="secondaryGhost"
@@ -338,7 +338,7 @@ const MyApp = () => {
 ```
 
 <Canvas>
-  <Story name="ThemeOverride">
+  <Story name="Theme Override">
     <ThemeOverride />
   </Story>
 </Canvas>
@@ -388,7 +388,7 @@ const MyApp = () => {
 ```
 
 <Canvas>
-  <Story name="GlobalOverride">
+  <Story name="Global Override">
     <GlobalOverride />
   </Story>
 </Canvas>
