--- a/docs/guides/theming/Theming.stories.mdx
+++ b/docs/guides/theming/Theming.stories.mdx
@@ -7,7 +7,7 @@ import { CssVariables } from "./CssVariables";
 import { CreateTheme } from "./CreateTheme";
 import { ThemeContext } from "./ThemeContext";
 
-<Meta title="Guides/Theming/Theming" />
+<Meta title="Guides/Theming" />
 
 # Theming <a id="theming" />
 
@@ -75,7 +75,7 @@ creating your own ones depending on your design needs and requirements.
 Find below the structure and values for each one of the default themes. Both themes have the same structure and only the values differ.
 
 <Canvas>
-  <Story name="ThemeStructure">
+  <Story name="Theme Structure">
     <ThemeStructure />
   </Story>
 </Canvas>
@@ -208,7 +208,7 @@ const MyApp = () => (
 ```
 
 <Canvas>
-  <Story name="CreateTheme">
+  <Story name="Create Theme">
     <CreateTheme />
   </Story>
 </Canvas>
@@ -330,7 +330,7 @@ const MyApp = () => {
 ```
 
 <Canvas>
-  <Story name="ThemeContext">
+  <Story name="Theme Context">
     <ThemeContext />
   </Story>
 </Canvas>
@@ -361,7 +361,7 @@ const MyComponent = () => {
 ```
 
 <Canvas>
-  <Story name="CssVariables">
+  <Story name="Css Variables">
     <CssVariables />
   </Story>
 </Canvas>
