--- a/docs/overview/community/Roadmap.stories.mdx
+++ b/docs/overview/community/Roadmap.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from "@storybook/addon-docs";
 
-<Meta title="Overview/Roadmap" />
+<Meta title="Overview/Community/Roadmap" />
 
 # Roadmap
