feat: class names key added to provider
feat: class names key added to provider

--- a/docs/guides/provider/Provider.stories.mdx
+++ b/docs/guides/provider/Provider.stories.mdx
@@ -43,6 +43,7 @@ Otherwise, the styling will not work properly. Please, find an example below.
     >
       <div id="hv-root-ds5-dawn-docs-provider">
         <HvProvider
+          classNameKey="hv-root-ds-five-dawn-docs-provider"
           rootElementId="hv-root-ds5-dawn-docs-provider"
           colorMode="dawn"
         >
@@ -51,6 +52,7 @@ Otherwise, the styling will not work properly. Please, find an example below.
       </div>
       <div id="hv-root-ds5-wicked-docs-provider">
         <HvProvider
+          classNameKey="hv-root-ds-five-wicked-docs-provider"
           rootElementId="hv-root-ds5-wicked-docs-provider"
           colorMode="wicked"
         >
@@ -59,6 +61,7 @@ Otherwise, the styling will not work properly. Please, find an example below.
       </div>
       <div id="hv-root-ds3-dawn-docs-provider">
         <HvProvider
+          classNameKey="hv-root-ds-three-dawn-docs-provider"
           rootElementId="hv-root-ds3-dawn-docs-provider"
           themes={[ds3]}
           colorMode="dawn"
@@ -68,6 +71,7 @@ Otherwise, the styling will not work properly. Please, find an example below.
       </div>
       <div id="hv-root-ds3-wicked-docs-provider">
         <HvProvider
+          classNameKey="hv-root-ds-three-wicked-docs-provider"
           rootElementId="hv-root-ds3-wicked-docs-provider"
           themes={[ds3]}
           colorMode="wicked"
