--- a/docs/guides/theming/Theming.stories.mdx
+++ b/docs/guides/theming/Theming.stories.mdx
@@ -32,6 +32,7 @@ Each one of these versions has a specific theme with two different color modes: 
   <div style={{ display: "flex", flexWrap: "wrap", gap: "10px" }}>
     <div id="hv-root-ds5-dawn-docs-default-themes">
       <HvProvider
+        classNameKey="hv-root-ds-five-dawn-docs-default-themes"
         rootElementId="hv-root-ds5-dawn-docs-default-themes"
         colorMode="dawn"
       >
@@ -40,6 +41,7 @@ Each one of these versions has a specific theme with two different color modes: 
     </div>
     <div id="hv-root-ds5-wicked-docs-default-themes">
       <HvProvider
+        classNameKey="hv-root-ds-five-wicked-docs-default-themes"
         rootElementId="hv-root-ds5-wicked-docs-default-themes"
         colorMode="wicked"
       >
@@ -48,6 +50,7 @@ Each one of these versions has a specific theme with two different color modes: 
     </div>
     <div id="hv-root-ds3-dawn-docs-default-themes">
       <HvProvider
+        classNameKey="hv-root-ds-three-dawn-docs-default-themes"
         rootElementId="hv-root-ds3-dawn-docs-default-themes"
         themes={[ds3]}
         colorMode="dawn"
@@ -57,6 +60,7 @@ Each one of these versions has a specific theme with two different color modes: 
     </div>
     <div id="hv-root-ds3-wicked-docs-default-themes">
       <HvProvider
+        classNameKey="hv-root-ds-three-wicked-docs-default-themes"
         rootElementId="hv-root-ds3-wicked-docs-default-themes"
         themes={[ds3]}
         colorMode="wicked"
