chore: disable applitools in filtered stories

--- a/packages/core/src/components/Snackbar/SnackbarProvider.stories.mdx
+++ b/packages/core/src/components/Snackbar/SnackbarProvider.stories.mdx
@@ -2,7 +2,10 @@ import { Meta, Story, Preview } from "@storybook/addon-docs";
 
 import { SnackbarProvider } from "./SnackbarProvider.stories.tsx";
 
-<Meta title="Components/Snackbar/Provider" />
+<Meta
+  title="Components/Snackbar/Provider"
+  parameters={{ eyes: { include: false } }}
+/>
 
 # Snackbar Provider
 
