--- a/docs/overview/GetStarted.stories.mdx
+++ b/docs/overview/GetStarted.stories.mdx
@@ -11,7 +11,7 @@ NEXT UI Kit uses [Emotion](https://emotion.sh/) as its default styling engine an
 To use NEXT UI Kit in your project, run the following command:
 
 ```
-npm install @hitachivantara/uikit-react-core @emotion/react @emotion/styled @emotion/css @mui/material
+npm install @hitachivantara/uikit-react-core @emotion/react @emotion/styled @mui/material
 ```
 
 ### Peer dependencies
