--- a/docs/guides/theming/Theming.stories.mdx
+++ b/docs/guides/theming/Theming.stories.mdx
@@ -34,6 +34,7 @@ Each one of these versions has a specific theme with two different color modes: 
       <HvProvider
         classNameKey="hv-root-ds-five-dawn-docs-default-themes"
         rootElementId="hv-root-ds5-dawn-docs-default-themes"
+        cssTheme="scoped"
         colorMode="dawn"
       >
         <ThemeSample title="Design System 5 - Dawn" />
@@ -43,6 +44,7 @@ Each one of these versions has a specific theme with two different color modes: 
       <HvProvider
         classNameKey="hv-root-ds-five-wicked-docs-default-themes"
         rootElementId="hv-root-ds5-wicked-docs-default-themes"
+        cssTheme="scoped"
         colorMode="wicked"
       >
         <ThemeSample title="Design System 5 - Wicked" />
@@ -52,6 +54,7 @@ Each one of these versions has a specific theme with two different color modes: 
       <HvProvider
         classNameKey="hv-root-ds-three-dawn-docs-default-themes"
         rootElementId="hv-root-ds3-dawn-docs-default-themes"
+        cssTheme="scoped"
         themes={[ds3]}
         colorMode="dawn"
       >
@@ -62,6 +65,7 @@ Each one of these versions has a specific theme with two different color modes: 
       <HvProvider
         classNameKey="hv-root-ds-three-wicked-docs-default-themes"
         rootElementId="hv-root-ds3-wicked-docs-default-themes"
+        cssTheme="scoped"
         themes={[ds3]}
         colorMode="wicked"
       >
@@ -253,7 +257,7 @@ The `uikit-react-core` package provides a React context named `HvThemeContext`. 
 - `selectedMode`: name of the active color mode;
 - `colorModes`: list of color modes available for the active theme;
 - `themes`: list of the available themes;
-- `rootId`: id of your root element;
+- `rootId`: id of the root element where the theme styles are being applied if scoped;
 - `activeTheme`: object with the active theme;
 - `changeTheme`: method to change the active theme and color mode.
 
