chore: docs cleanup

--- a/docs/overview/introduction/Introduction.stories.mdx
+++ b/docs/overview/introduction/Introduction.stories.mdx
@@ -62,3 +62,7 @@ Even though we're focused on developing a component library that is compliant wi
 - Take a look to our detailed [Releases Change Logs](https://github.com/lumada-design/hv-uikit-react/releases).
 - Dive into our issues in the [github](https://github.com/lumada-design/hv-uikit-react/issues) repository.
 - Discover the [NEXT Design System](https://designsystem.hitachivantara.com) resources.
+
+## License
+
+This project is licensed under the terms of the [Apache 2.0 license](/LICENSE.md).
