docs: table hooks docs updated

--- a/docs/guides/styling/Customization.stories.mdx
+++ b/docs/guides/styling/Customization.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Canvas } from "@storybook/addon-docs";
+import { Meta, Canvas, Story } from "@storybook/addon-docs";
 import { HvButton, theme } from "@hitachivantara/uikit-react-core";
 import {
   OverrideClassName,
@@ -47,7 +47,7 @@ const MyComponent = () => (
 ```
 
 <Canvas>
-  <Story name="InlineStyles">
+  <Story name="Inline Styles">
     <InlineStyles />
   </Story>
 </Canvas>
