docs: table samples docs updated

--- a/docs/guides/theming/WhiteLabeling.stories.mdx
+++ b/docs/guides/theming/WhiteLabeling.stories.mdx
@@ -1,9 +1,9 @@
 import { Meta, Canvas } from "@storybook/addon-docs";
 import { WhiteLabeling } from "./WhiteLabeling";
 
-<Meta title="Guides/Theming/White labeling" />
+<Meta title="Guides/Theming/White Labeling" />
 
-# White labeling
+# White Labeling
 
 A major feature of the NEXT UI Kit is white labeling. This feature enhances the customization capabilities in a way that enables you to keep
 using the UI Kit in a multitude of design scenarios when there's a need to meet different UI guidelines from the NEXT Design System. Thus, it's possible to
